Fixed chart view tree scrollbar

--- a/src/components/ChartPanel/Panel.scss
+++ b/src/components/ChartPanel/Panel.scss
@@ -1,4 +1,10 @@
-/*
+/**
+ * @Author: Guan Gui <guiguan>
+ * @Date:   2017-09-21T15:25:12+10:00
+ * @Email:  root@guiguan.net
+ * @Last modified by:   guiguan
+ * @Last modified time: 2018-06-13T16:50:42+10:00
+ *
  * dbKoda - a modern, open source code editor, for MongoDB.
  * Copyright (C) 2017-2018 Southbank Software
  *
@@ -40,6 +46,10 @@
   .SplitPane.SplitPane.vertical {
     // fix resizer hidden problem
     right: auto !important;
+
+    .Pane1 {
+      overflow-y: scroll !important;
+    }
   }
 
   .DataTree,
